# PlainCOpenGL

./: CMakeLists.txt
src/Header Files/api/: window.h
src/Header Files/util/: glutils.h
src/Source Files/: main.c
src/Source Files/api/: window.c
